--- a/i44.html
+++ b/i44.html
@@ -1105,12 +1105,7 @@ that best fits your needs</h3><div class="vc_empty_space" style="height: 20px"><
 <span data-ultimate-target='#price-table-wrap-3512 .ult_price_term' data-responsive-json-new='{"font-size":"","line-height":""}' class="ult_price_term ult-responsive" style="font-weight:normal;">per year</span>
 </div>
 </div>
-</div><div id="price-table-features-wrap-2994" class="ult_price_features ult-responsive" data-ultimate-target='#price-table-features-wrap-2994' data-responsive-json-new='{"font-size":"","line-height":""}' style="font-weight:normal;">
-<p>32 GB storage<br />
-Free Maintenance<br />
-Fully SEO Featured<br />
-Unlimited Data Transfer<br />
-Easy Payment</p>
+</div>
 </div><div id="price-table-button-wrap-8783" class="ult_price_link">
 <a data-ultimate-target='#price-table-button-wrap-8783 .ult_price_action_button' data-responsive-json-new='{"font-size":"","line-height":""}' href="#" class="ult_price_action_button ult-responsive" style="background:#ffffff;color:#282c3f; font-weight:normal;">Get Starter</a>
 </div><div class="ult_clr"></div>
@@ -1124,15 +1119,10 @@ Easy Payment</p>
 <span data-ultimate-target='#price-table-wrap-4605 .ult_price_term' data-responsive-json-new='{"font-size":"","line-height":""}' class="ult_price_term ult-responsive" style="font-weight:normal;"></span>
 </div>
 </div>
-</div><div id="price-table-features-wrap-3792" class="ult_price_features ult-responsive" data-ultimate-target='#price-table-features-wrap-3792' data-responsive-json-new='{"font-size":"","line-height":""}' style="font-weight:normal;">
-<p>320 GB storage<br />
-Free Maintenance<br />
-Fully SEO Featured<br />
-Unlimited Data Transfer<br />
-Dedicated Environment<br />
-Easy Payment<br />
-24/7 Support</p>
-</div><div id="price-table-button-wrap-5256" class="ult_price_link">
+</div>
+	
+	
+	<div id="price-table-button-wrap-5256" class="ult_price_link">
 <a data-ultimate-target='#price-table-button-wrap-5256 .ult_price_action_button' data-responsive-json-new='{"font-size":"","line-height":""}' href="#" class="ult_price_action_button ult-responsive" style="background:#f3f3f5;color:#282c3f; font-weight:normal;">For advanced users</a>
 </div><div class="ult_clr"></div>
 </div>
