--- a/ii44.html
+++ b/ii44.html
@@ -207,9 +207,8 @@ lsjQuery("#layerslider_2").layerSlider({sliderVersion: '6.6.0', type: 'fixedsize
 
 
 </div></div></div></div><div class="vc_empty_space" style="height: 280px"><span class="vc_empty_space_inner"></span></div>
-</div></div></div></div><div class="vc_row wpb_row vc_row-fluid vc_custom_1505773106864 vc_row-o-equal-height vc_row-o-content-middle vc_row-flex"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1505769892377"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="wpb_revslider_element wpb_content_element"><link href="https://fonts.googleapis.com/css?family=Lato:100%2C500%2C900|Roboto:500" rel="stylesheet" property="stylesheet" type="text/css" media="all">
-<div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-source="gallery" style="margin:0px auto;background:#222222;padding:0px;margin-top:0px;margin-bottom:0px;">
-
+</div></div></div></div>
+	
 
 	
 	
